# jam-session-video-game

./: .gitignore  ABOUT.md  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  ROADMAP.md  pyproject.toml  setup.py
docs/code_examples/gpt-ai/: .env.template  readme.md  vicuna_prompt_example.py
docs/example3/: Player.py  Prueba.tsx  Scene.py  UserInterfaceInteractive.py  main.py  map_1.tmx  with_classes.py
docs/example3/design/: diagram.md  research.md
docs/example3/tiled/: testofi.tiled-session  testofi2.tmx
docs/examples/gui_examples/: Pipfile  character.py  main.py  player.py  settings.py  spritesheethandler.py  ui.py
docs/examples2/: gpt_4_full_requirements.py  gpt_4_task_based.py  theme.json
docs/lib_old/components/: game.py  game_interface.py
docs/lib_old/entities/: asset.py  player.py
docs/lib_old/pygame_utils/: game_state.py
docs/lib_old/stages/: main_menu.py
jam_session/: game.py
jam_session/lib/base/: keyboard_event.py
jam_session/lib/components/: assets_default.py  assets_npc.py  assets_player.py  event_handler.py  game.py  game_interface.py  user_interface.py
jam_session/lib/entities/: asset.py  game_state.py  player.py  principalpj_sprite.py  stage.py
jam_session/tiled/: map_spritesheet.tsx  objetostest.tsx  testofi.tmx
late_again/: settings.py
late_again/components/: game_controller.py  user_interface.py
resources/: asetst.aseprite  pjts
tests/: test_tmx_map.py
tests/resources/: la_tileset.tsx  map_1.tmx  map_2.tmx
~org/: .gitignore  ABOUT.md  CHANGELOG.md  NOTES.md  Pipfile  ROADMAP.md
(+44 files in other folders)
